# fastapi-sentiment-analyzer-server

./: .dir-locals.el  .dockerignore  .gitignore  Dockerfile  README.md  config.json  models  pyproject.toml  requirements.txt
app/: main.py
app/classifier/: model.py  sentiment_classifier.py
app/db/: base.py  models.py  session.py
app/routers/: feedback.py  predict.py
app/schemas/: feedback.py  predict.py
sentiment_analyzer/: api.py
